<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainpages.more.editprofile.EditProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/edit_profile_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rounded_corner"
            android:elevation="5dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">

            <EditText
                android:id="@+id/ed_name_ProfilePage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/profile_name"
                android:theme="@style/EditTextStyle" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/edit_profile_email"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rounded_corner"
            android:elevation="5dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">

            <EditText
                android:id="@+id/ed_email_ProfilePage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/profile_email"
                android:theme="@style/EditTextStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rounded_corner"
            android:elevation="5dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">

            <EditText
                android:id="@+id/ed_emailConf_ProfilePage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/profile_email_ed"
                android:theme="@style/EditTextStyle" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/profile_pass"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rounded_corner"
            android:elevation="5dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">

            <EditText
                android:id="@+id/ed_password_ProfilePage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/profile_new_pass"
                android:theme="@style/EditTextStyle"
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rounded_corner"
            android:elevation="5dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">

            <EditText
                android:id="@+id/ed_passwordConf_ProfilePage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/profile_new_pass_conf"
                android:theme="@style/EditTextStyle"
                android:inputType="textPassword"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conf_edit"
            android:layout_marginTop="32dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="4dp"
            android:text="@string/conf_edit_desc"
            android:textColor="@color/grey"
            android:textSize="15sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rounded_corner"
            android:elevation="5dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">

            <EditText
                android:id="@+id/ed_oldPass_ProfilePage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/password"
                android:theme="@style/EditTextStyle"
                android:inputType="textPassword"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_save_ProfilePage"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_rounded_corner"
            android:text="@string/save"
            android:textSize="16sp" />
    </LinearLayout>
    </ScrollView>
</FrameLayout>