<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".mainpages.shoplist.bottomsheet.BottomSheetFragment">

    <TextView
        android:id="@+id/itemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/item_list"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:theme="@style/EditTextStyle">

        <EditText
            android:id="@+id/ed_ItemListName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:theme="@style/EditTextStyle"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save_item_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/bg_rounded_corner"
        android:text="@string/add"
        android:layout_marginBottom="24dp"
        android:textSize="18sp"
        style="@style/ButtonStyle"/>

</LinearLayout>