<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainpages.more.about.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="32dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/iv_appImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ic_launcher_foreground"
                android:layout_margin="8dp"
                android:background="@drawable/bg_rounded_corner"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_appVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/version"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="normal" />

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_privacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_corner"
            app:cardCornerRadius="16dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="24dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Политика конфиденциальности"
            android:layout_marginStart="20dp"
            android:layout_marginVertical="14dp"
            android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_licenseAgreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_corner"
            app:cardCornerRadius="16dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/license_agreement"
                android:layout_marginStart="20dp"
                android:layout_marginVertical="14dp"
                android:textSize="16sp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_aboutUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_corner"
            app:cardCornerRadius="16dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:layout_marginStart="20dp"
                android:layout_marginVertical="14dp"
                android:textSize="16sp"/>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/about_us_desc"
                android:textSize="16dp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>